--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Century Bakery</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Photo Magic</title>
+  <meta content="Transform your photos and videos into captivating masterpieces with Photo Magic's studio expertise." name="description">
+  <meta content="Photo Magic" name="keywords">
 
   <!-- Favicons -->
   <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
