--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta content="Photo Magic" name="keywords">
 
   <!-- Favicons -->
-  <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://telegra.ph/file/74d502b6afa44b2db029b.png" type="image/x-icon" />
 
   <!-- Vendor CSS Files -->
   <link rel="stylesheet" href="assets/vendor/aos.css/aos.css" />
