--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       data-aos-delay="100">About Us</a>
     <a data-scroll data-easing="easeInQuint" href="#menu" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="150">Menu</a>
-    <img src="https://telegra.ph/file/74d502b6afa44b2db029b.png" alt="" data-aos="fade-down" data-aos-duration="1500">
+    <img src="assets/img/logoforakka.png" alt="" data-aos="fade-down" data-aos-duration="1500">
     <a data-scroll data-easing="easeInQuint" href="#review" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="150">Review</a>
     <a data-scroll data-easing="easeInQuint" href="#partnership" data-aos="fade-down" data-aos-duration="400"
