--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,29 @@
 
   <!-- Template Main CSS File -->
   <link rel="stylesheet" href="assets/css/style.css" />
+
   
+</head>
+
+<body>
+    <!-- ======= Header ======= -->
+    <div class="nav">
+      <a data-scroll data-easing="easeInQuint" href="#beranda" data-aos="fade-down" data-aos-duration="400"
+        data-aos-delay="50">Home</a>
+      <a data-scroll data-easing="easeInQuint" href="#tentang" data-aos="fade-down" data-aos-duration="400"
+        data-aos-delay="100">About Us</a>
+      <a data-scroll data-easing="easeInQuint" href="#menu" data-aos="fade-down" data-aos-duration="400"
+        data-aos-delay="150">Menu</a>
+      <img src="assets/img/mainlogo1.png" alt="" data-aos="fade-down" data-aos-duration="1500">
+      <a data-scroll data-easing="easeInQuint" href="#review" data-aos="fade-down" data-aos-duration="400"
+        data-aos-delay="150">Review</a>
+      <a data-scroll data-easing="easeInQuint" href="#partnership" data-aos="fade-down" data-aos-duration="400"
+        data-aos-delay="100">Partnership</a>
+      <a data-scroll data-easing="easeInQuint" href="#lokasi" data-aos="fade-down" data-aos-duration="400"
+        data-aos-delay="50">Location</a>
+      <img src="assets/img/menu.png" alt="" id="btn-nav" data-aos="fade-down" data-aos-duration="700" data-aos-delay="50">
+    </div>
+    
 <!-- ======= Galery Start ======= -->
 <div class="gallery container">
     <h1 class="judul">Galery</h1>
