--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
         data-aos-delay="50">Location</a>
       <img src="assets/img/menu.png" alt="" id="btn-nav" data-aos="fade-down" data-aos-duration="700" data-aos-delay="50">
     </div>
-    
+
 <!-- ======= Galery Start ======= -->
 <div class="gallery container">
     <h1 class="judul">Galery</h1>
@@ -68,4 +68,52 @@
 
 </body>
 
+  <!-- ======= Footer Start ======= -->
+  <div class="footer">
+    <div class="footer-1">
+      <div class="footer-logo" data-aos="fade-down" data-aos-duration="800">
+        <img src="assets/img/logo.png" alt="">
+        <h1>Century Bakery</h1>
+      </div>
+      <p data-aos="fade-up" data-aos-duration="800">Provide The Best Service <br> Made By Hand And Love.</p>
+      <div class="sosial-media">
+        <a href="">
+          <img src="assets/img/facebook.png" alt="" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="200">
+        </a>
+        <a href="https://www.instagram.com/msn.production/">
+          <img src="assets/img/instagram.png" alt="" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="250">
+        </a>
+        <a href="">
+          <img src="assets/img/twitter.png" alt="" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="300">
+        </a>
+      </div>
+    </div>
+
+    <div class="footer-2">
+      <h1 data-aos="fade-down" data-aos-duration="800" data-aos-delay="200">Contact</h1>
+      <a href="" data-aos="fade-up" data-aos-duration="800" data-aos-delay="250">+62 821 2566 4554</a>
+      <a href="" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">info@centurybakery.com</a>
+    </div>
+
+    <div class="footer-3">
+      <h1 data-aos="fade-down" data-aos-duration="800" data-aos-delay="300">Operational Time</h1>
+      <p data-aos="fade-up" data-aos-duration="800" data-aos-delay="350">Mon - Wed 05 Am - 09 Pm</p>
+      <p data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">Thu - Sat 05 Am - 08 Pm</p>
+      <p data-aos="fade-up" data-aos-duration="800" data-aos-delay="450">Sun 04 Am - 08 Pm</p>
+    </div>
+
+    <div class="footer-4" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
+      <h1>Link</h1>
+      <a data-scroll data-easing="easeInQuint" href="#beranda">Home</a>
+      <a data-scroll data-easing="easeInQuint" href="#tentang">About Us</a>
+      <a data-scroll data-easing="easeInQuint" href="#menu">Menu</a>
+      <a data-scroll data-easing="easeInQuint" href="#review">Review</a>
+      <a data-scroll data-easing="easeInQuint" href="#partnership">Partnership</a>
+      <a data-scroll data-easing="easeInQuint" href="#lokasi">Location</a>
+    </div>
+  </div>
+  <footer>
+    <h1>&copy; Copyright 2022, <a href=""> MSN PRODUCTION - PT. Mulia Sejati Nusantara.</a> All Rights Reserved</h1>
+  </footer>
+  <!-- ======= Footer End ======= -->
 </html>
