--- a/index.html
+++ b/index.html
@@ -69,11 +69,9 @@
     <div class="area-tentang" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
       <h1 class="judul">About Us</h1>
       <p>
-        Century Bakery was Founded in 1920 in Indonesia with The Motto of the Best Service and Quality, we always
-        choose
-        the Best Ingredients. We make dishes with local Ingredients, We make them by Hand and with Love. 23 Outlet
-        have
-        been opened in Indonesia with 763 employes. Many Companies and People have trusted us.
+        Founded in 2023, Photo Magic is a leading photo and video editing company with its very own state-of-the-art studio. We are passionate about bringing your visual ideas to life, transforming ordinary moments into extraordinary memories. Our dedicated team of talented professionals is committed to providing you with the best service in the industry.
+
+At Photo Magic, we understand that every photo and video holds a special story, and our mission is to enhance and amplify those narratives through our expertise in editing and post-production. Whether you're a professional photographer, a social media influencer, or simply someone who loves capturing moments, we are here to turn your vision into reality.
       </p>
       <p>. . .</p>
     </div>
