--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- ======= About Start ======= -->
   <div class="tentang container" id="tentang">
-    <img src="assets/img/compact-digital-camera-illustration-png" alt="" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="200">
+    <img src="assets/img/compactdigital.webp" alt="" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="200">
     <div class="area-tentang" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">
       <h1 class="judul">About Us</h1>
       <p>
