--- a/gallery.html
+++ b/gallery.html
@@ -73,7 +73,7 @@
     <div class="footer-1">
       <div class="footer-logo" data-aos="fade-down" data-aos-duration="800">
         <img src="assets/img/logo.png" alt="">
-        <h1>Century Bakery</h1>
+        <h1>Photo Magic</h1>
       </div>
       <p data-aos="fade-up" data-aos-duration="800">Provide The Best Service <br> Made By Hand And Love.</p>
       <div class="sosial-media">
@@ -92,7 +92,7 @@
     <div class="footer-2">
       <h1 data-aos="fade-down" data-aos-duration="800" data-aos-delay="200">Contact</h1>
       <a href="" data-aos="fade-up" data-aos-duration="800" data-aos-delay="250">+62 821 2566 4554</a>
-      <a href="" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">info@centurybakery.com</a>
+      <a href="" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">info@PhotoMagic.com</a>
     </div>
 
     <div class="footer-3">
