--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ At Photo Magic, we understand that every photo and video holds a special story, 
         <img src="assets/img/logo.png" alt="">
         <h1>Photo Magic</h1>
       </div>
-      <p data-aos="fade-up" data-aos-duration="800">Provide The Best Service <br> Made By Hand And Love.</p>
+      <p data-aos="fade-up" data-aos-duration="800">Where ordinary moments become<br> Extraordinary memories through editing. </p>
       <div class="sosial-media">
         <a href="">
           <img src="assets/img/facebook.png" alt="" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="200">
