--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ At Photo Magic, we understand that every photo and video holds a special story, 
     </div>
   </div>
   <footer>
-    <h1>&copy; Copyright 2022, <a href=""> MSN PRODUCTION - PT. Mulia Sejati Nusantara.</a> All Rights Reserved</h1>
+    <h1>&copy; Copyright 2023, <a href=""> Photo Magic.</a> All Rights Reserved</h1>
   </footer>
   <!-- ======= Footer End ======= -->
 
