--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@
         <img src="assets/img/logo.png" alt="">
         <h1>Photo Magic</h1>
       </div>
-      <p data-aos="fade-up" data-aos-duration="800">Provide The Best Service <br> Made By Hand And Love.</p>
+      <p data-aos="fade-up" data-aos-duration="800">Where ordinary moments become<br> Extraordinary memories through editing. </p>
       <div class="sosial-media">
         <a href="">
           <img src="assets/img/facebook.png" alt="" data-aos="zoom-in-up" data-aos-duration="800" data-aos-delay="200">
@@ -113,7 +113,7 @@
     </div>
   </div>
   <footer>
-    <h1>&copy; Copyright 2022, <a href=""> MSN PRODUCTION - PT. Mulia Sejati Nusantara.</a> All Rights Reserved</h1>
+    <h1>&copy; Copyright 2023, <a href=""> Photo Magic.</a> All Rights Reserved</h1>
   </footer>
   <!-- ======= Footer End ======= -->
 </html>
