--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <a data-scroll data-easing="easeInQuint" href="#beranda" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="50">Home</a>
     <a data-scroll data-easing="easeInQuint" href="#tentang" data-aos="fade-down" data-aos-duration="400"
-      data-aos-delay="100">About Us</a>
+      data-aos-delay="100">Gallery</a>
     <a data-scroll data-easing="easeInQuint" href="#menu" data-aos="fade-down" data-aos-duration="400"
-      data-aos-delay="150">Menu</a>
+      data-aos-delay="150">Contact Us</a>
     <img src="assets/img/mainlogo.png" alt="" data-aos="fade-down" data-aos-duration="1500">
     <a data-scroll data-easing="easeInQuint" href="#review" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="150">Review</a>
@@ -113,15 +113,6 @@ At Photo Magic, we understand that every photo and video holds a special story, 
       <p data-aos="fade-up" data-aos-duration="800" data-aos-delay="450">Sun 04 Am - 08 Pm</p>
     </div>
 
-    <div class="footer-4" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
-      <h1>Link</h1>
-      <a data-scroll data-easing="easeInQuint" href="#beranda">Home</a>
-      <a data-scroll data-easing="easeInQuint" href="#tentang">About Us</a>
-      <a data-scroll data-easing="easeInQuint" href="#menu">Menu</a>
-      <a data-scroll data-easing="easeInQuint" href="#review">Review</a>
-      <a data-scroll data-easing="easeInQuint" href="#partnership">Partnership</a>
-      <a data-scroll data-easing="easeInQuint" href="#lokasi">Location</a>
-    </div>
   </div>
   <footer>
     <h1>&copy; Copyright 2023, <a href=""> Photo Magic.</a> All Rights Reserved</h1>
