--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       data-aos-delay="50">Home</a>
     <a data-scroll data-easing="easeInQuint" href="#tentang" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="100">Gallery</a>
-    <a data-scroll data-easing="easeInQuint" href="#menu" data-aos="fade-down" data-aos-duration="400"
+    <a data-scroll data-easing="easeInQuint" href="#footer-2" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="150">Contact Us</a>
     <img src="assets/img/mainlogo.png" alt="" data-aos="fade-down" data-aos-duration="1500">
     <a data-scroll data-easing="easeInQuint" href="#review" data-aos="fade-down" data-aos-duration="400"
