--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ At Photo Magic, we understand that every photo and video holds a special story, 
       </div>
     </div>
 
-    <div class="footer-2">
+    <div class="footer-2" id="footer-2">
       <h1 data-aos="fade-down" data-aos-duration="800" data-aos-delay="200">Contact</h1>
       <a href="" data-aos="fade-up" data-aos-duration="800" data-aos-delay="250">+62 821 2566 4554</a>
       <a href="" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">info@PhotoMagic.com</a>
