--- a/gallery.html
+++ b/gallery.html
@@ -26,21 +26,17 @@
 <body>
     <!-- ======= Header ======= -->
     <div class="nav">
-      <a data-scroll data-easing="easeInQuint" href="#beranda" data-aos="fade-down" data-aos-duration="400"
-        data-aos-delay="50">Home</a>
-      <a data-scroll data-easing="easeInQuint" href="#tentang" data-aos="fade-down" data-aos-duration="400"
-        data-aos-delay="100">About Us</a>
-      <a data-scroll data-easing="easeInQuint" href="#menu" data-aos="fade-down" data-aos-duration="400"
-        data-aos-delay="150">Menu</a>
-      <img src="assets/img/mainlogo1.png" alt="" data-aos="fade-down" data-aos-duration="1500">
-      <a data-scroll data-easing="easeInQuint" href="#review" data-aos="fade-down" data-aos-duration="400"
-        data-aos-delay="150">Review</a>
-      <a data-scroll data-easing="easeInQuint" href="#partnership" data-aos="fade-down" data-aos-duration="400"
-        data-aos-delay="100">Partnership</a>
-      <a data-scroll data-easing="easeInQuint" href="#lokasi" data-aos="fade-down" data-aos-duration="400"
-        data-aos-delay="50">Location</a>
-      <img src="assets/img/menu.png" alt="" id="btn-nav" data-aos="fade-down" data-aos-duration="700" data-aos-delay="50">
-    </div>
+        <a data-scroll data-easing="easeInQuint" href="#beranda" data-aos="fade-down" data-aos-duration="400"
+          data-aos-delay="50">Home</a>
+        <a data-scroll data-easing="easeInQuint" href="#tentang" data-aos="fade-down" data-aos-duration="400"
+          data-aos-delay="100">Gallery</a>
+        <img src="assets/img/mainlogo.png" alt="" data-aos="fade-down" data-aos-duration="1500">
+        <a data-scroll data-easing="easeInQuint" href="#footer-2" data-aos="fade-down" data-aos-duration="400"
+          data-aos-delay="150">Operational Time</a>
+        <a data-scroll data-easing="easeInQuint" href="#partnership" data-aos="fade-down" data-aos-duration="400"
+          data-aos-delay="100">Contact Us</a>
+        <img src="assets/img/menu.png" alt="" id="btn-nav" data-aos="fade-down" data-aos-duration="700" data-aos-delay="50">
+      </div>
 
 <!-- ======= Galery Start ======= -->
 <div class="gallery container">
