--- a/index.html
+++ b/index.html
@@ -31,15 +31,11 @@
       data-aos-delay="50">Home</a>
     <a data-scroll data-easing="easeInQuint" href="#tentang" data-aos="fade-down" data-aos-duration="400"
       data-aos-delay="100">Gallery</a>
-    <a data-scroll data-easing="easeInQuint" href="#footer-2" data-aos="fade-down" data-aos-duration="400"
-      data-aos-delay="150">Contact Us</a>
     <img src="assets/img/mainlogo.png" alt="" data-aos="fade-down" data-aos-duration="1500">
-    <a data-scroll data-easing="easeInQuint" href="#review" data-aos="fade-down" data-aos-duration="400"
-      data-aos-delay="150">Review</a>
+    <a data-scroll data-easing="easeInQuint" href="#footer-2" data-aos="fade-down" data-aos-duration="400"
+      data-aos-delay="150">Operational Time</a>
     <a data-scroll data-easing="easeInQuint" href="#partnership" data-aos="fade-down" data-aos-duration="400"
-      data-aos-delay="100">Partnership</a>
-    <a data-scroll data-easing="easeInQuint" href="#lokasi" data-aos="fade-down" data-aos-duration="400"
-      data-aos-delay="50">Location</a>
+      data-aos-delay="100">Contact Us</a>
     <img src="assets/img/menu.png" alt="" id="btn-nav" data-aos="fade-down" data-aos-duration="700" data-aos-delay="50">
   </div>
 
