--- a/contactus.html
+++ b/contactus.html
@@ -19,6 +19,10 @@
 
   <!-- Template Main CSS File -->
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="resources/user/assets/css/style.css">
+  <link rel="stylesheet" href="resources/user/assets/css/responsive.css">
+  <link rel="stylesheet" href="resources/user/assets/css/color.css">
+  <script src="https://www.googletagmanager.com/gtag/js?id=G-P949QM6HHC" async></script>
 
   
 </head>
@@ -84,7 +88,7 @@
 </div>
 </div>
 </section>
-<script src="../www.google.com/recaptcha/api2a5c.js?render=6LcTzgoiAAAAAGEgWpkF5z1OH78_i6qRTBZRiXoh"></script>
+<script src="https://www.google.com/recaptcha/api2a5c.js?render=6LcTzgoiAAAAAGEgWpkF5z1OH78_i6qRTBZRiXoh"></script>
 <script>
 const contactForm = document.getElementById("contact-form");
 contactForm.addEventListener("submit", (event) => {
@@ -113,6 +117,36 @@ grecaptcha.ready(() => {
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+</a>
+<script src="resources/user/assets/js/jquery.js"></script>
+<script src="resources/user/assets/js/popper.js"></script>
+<script src="resources/user/assets/js/bootstrap.js"></script>
+<script src="resources/user/assets/js/tween-max.js"></script>
+<script src="resources/user/assets/js/ui.js"></script>
+<script src="resources/user/assets/js/fancy-box.js"></script>
+<script src="resources/user/assets/js/owl.js"></script>
+<script src="resources/user/assets/js/mix-it-up.js"></script>
+<script src="resources/user/assets/js/appear.js"></script>
+<script src="resources/user/assets/js/wow.js"></script>
+<script src="resources/user/assets/js/lazy-sizes.js"></script>
+<script src="resources/user/assets/js/script.js"></script>
+<script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Phyxle",
+        "url": "https://phyxle.com",
+        "sameAs": [
+            "https://www.instagram.com/phyxle",
+            "https://www.facebook.com/phyxle",
+            "https://www.linkedin.com/company/phyxle",
+            "https://twitter.com/phyxle_com",
+            "https://www.youtube.com/channel/UCwxE1f8Dg_X_mIMDehzpKJw"
+        ]
+    }
+</script>
+</body>
 
 </body>
 
