--- a/contactus.html
+++ b/contactus.html
@@ -19,10 +19,6 @@
 
   <!-- Template Main CSS File -->
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="resources/user/assets/css/style.css">
-  <link rel="stylesheet" href="resources/user/assets/css/responsive.css">
-  <link rel="stylesheet" href="resources/user/assets/css/color.css">
-  <script src="https://www.googletagmanager.com/gtag/js?id=G-P949QM6HHC" async></script>
 
   
 </head>
@@ -43,69 +39,17 @@
       </div>
 
 <!-- ======= Contact us Start ======= -->
-<div class="form-box">
-    <div class="sec-title">
-        <h2>Write Us a Message <span class="dot">.</span></h2>
+<div class="gallery container">
+    <h1 class="judul">Galery</h1>
+    <div class="area-gallery" id="content">
+      <img src="assets/img/toko.jpg" alt="">
+      <img src="assets/img/toko2.jpg" alt="">
+      <img src="assets/img/toko3.jpg" alt="">
+      <img src="assets/img/toko1.jpg" alt="">
+      <img src="assets/img/gallery1.jpg" alt="">
+      <img src="assets/img/gallery2.jpg" alt="">
     </div>
-    <div class="default-form">
-        <form action="https://phyxle.com/contact" method="POST" id="contact-form">
-            <input type="hidden" name="recaptcha-token" id="recaptcha-token">
-            <div class="row clearfix">
-                <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                    <div class="field-inner">
-                        <input type="text" name="name" placeholder="Enter your name" maxlength="191" required>
-                    </div>
-                </div>
-                <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                    <div class="field-inner">
-                        <input type="email" name="email" placeholder="Enter your email address" maxlength="191" required>
-                    </div>
-                </div>
-                <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                    <div class="field-inner">
-                        <input type="tel" name="phone" placeholder="Enter your phone number" minlength="10" maxlength="15" required>
-                    </div>
-                </div>
-                <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                    <div class="field-inner">
-                        <input type="text" name="subject" placeholder="Enter your subject" maxlength="191" required>
-                    </div>
-                </div>
-                <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                    <div class="field-inner">
-                        <textarea name="message" placeholder="Enter your message" maxlength="1000" required></textarea>
-                    </div>
-                </div>
-                <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                    <button class="theme-btn btn-style-one">
-                        <i class="btn-curve"></i>
-                        <span class="btn-title">Send Message</span>
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-</div>
-</section>
-<script src="https://www.google.com/recaptcha/api2a5c.js?render=6LcTzgoiAAAAAGEgWpkF5z1OH78_i6qRTBZRiXoh"></script>
-<script>
-const contactForm = document.getElementById("contact-form");
-contactForm.addEventListener("submit", (event) => {
-event.preventDefault();
-
-grecaptcha.ready(() => {
-    grecaptcha.execute("6LcTzgoiAAAAAGEgWpkF5z1OH78_i6qRTBZRiXoh", {
-        action: "submit"
-    }).then((token) => {
-        const recaptchaToken = document.getElementById("recaptcha-token");
-        recaptchaToken.value = token;
-
-        contactForm.submit();
-    });
-});
-});
-</script>
+  </div>
   <!-- ======= Contact us End ======= -->
 
   <!-- Vendor JS Files -->
@@ -117,36 +61,6 @@ grecaptcha.ready(() => {
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
-</a>
-<script src="resources/user/assets/js/jquery.js"></script>
-<script src="resources/user/assets/js/popper.js"></script>
-<script src="resources/user/assets/js/bootstrap.js"></script>
-<script src="resources/user/assets/js/tween-max.js"></script>
-<script src="resources/user/assets/js/ui.js"></script>
-<script src="resources/user/assets/js/fancy-box.js"></script>
-<script src="resources/user/assets/js/owl.js"></script>
-<script src="resources/user/assets/js/mix-it-up.js"></script>
-<script src="resources/user/assets/js/appear.js"></script>
-<script src="resources/user/assets/js/wow.js"></script>
-<script src="resources/user/assets/js/lazy-sizes.js"></script>
-<script src="resources/user/assets/js/script.js"></script>
-<script type="application/ld+json">
-    {
-        "@context": "http://schema.org",
-        "@type": "Organization",
-        "name": "Phyxle",
-        "url": "https://phyxle.com",
-        "sameAs": [
-            "https://www.instagram.com/phyxle",
-            "https://www.facebook.com/phyxle",
-            "https://www.linkedin.com/company/phyxle",
-            "https://twitter.com/phyxle_com",
-            "https://www.youtube.com/channel/UCwxE1f8Dg_X_mIMDehzpKJw"
-        ]
-    }
-</script>
-</body>
 
 </body>
 
