--- a/gallery.html
+++ b/gallery.html
@@ -45,6 +45,8 @@
       <img src="assets/img/toko.jpg" alt="">
       <img src="assets/img/toko2.jpg" alt="">
       <img src="assets/img/toko3.jpg" alt="">
+      <img src="assets/img/toko1.jpg" alt="">
+      <img src="assets/img/toko1.jpg" alt="">
       <img src="assets/img/gallery1.jpg" alt="">
       <img src="assets/img/gallery2.jpg" alt="">
     </div>
