--- a/gallery.html
+++ b/gallery.html
@@ -42,12 +42,12 @@
 <div class="gallery container">
     <h1 class="judul">Galery</h1>
     <div class="area-gallery" id="content">
-      <img src="assets/img/toko.jpg" alt="">
-      <img src="assets/img/toko2.jpg" alt="">
-      <img src="assets/img/toko3.jpg" alt="">
-      <img src="assets/img/toko1.jpg" alt="">
-      <img src="assets/img/gallery1.jpg" alt="">
-      <img src="assets/img/gallery2.jpg" alt="">
+      <img src="assets/img/galleryimage1.jpg" alt="">
+      <img src="assets/img/galleryimage2.jpg" alt="">
+      <img src="assets/img/galleryimage3.jpg" alt="">
+      <img src="assets/img/galleryimage4.jpg" alt="">
+      <img src="assets/img/galleryimage5.jpg" alt="">
+      <img src="assets/img/galleryimage6.jpg" alt="">
     </div>
   </div>
   <!-- ======= Galery End ======= -->
