--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
           data-aos-delay="100">Gallery</a>
         <img src="assets/img/mainlogo.png" alt="" data-aos="fade-down" data-aos-duration="1500">
         <a data-scroll data-easing="easeInQuint" href="#footer-2" data-aos="fade-down" data-aos-duration="400"
-          data-aos-delay="150">Ope Time</a>
+          data-aos-delay="150">Open Time</a>
         <a data-scroll data-easing="easeInQuint" href="#partnership" data-aos="fade-down" data-aos-duration="400"
           data-aos-delay="100">Contact Us</a>
         <img src="assets/img/menu.png" alt="" id="btn-nav" data-aos="fade-down" data-aos-duration="700" data-aos-delay="50">
@@ -40,7 +40,7 @@
 
 <!-- ======= Galery Start ======= -->
 <div class="gallery container">
-    <h1 class="judul">Galery</h1>
+    <h1 class="judul">Gallery</h1>
     <div class="area-gallery" id="content">
       <img src="assets/img/galleryimage1.jpg" alt="">
       <img src="assets/img/galleryimage2.jpg" alt="">
