--- a/gallery.html
+++ b/gallery.html
@@ -26,14 +26,14 @@
 <body>
     <!-- ======= Header ======= -->
     <div class="nav">
-        <a data-scroll data-easing="easeInQuint" href="http://localhost/index.html" data-aos="fade-down" data-aos-duration="400"
+        <a data-scroll data-easing="easeInQuint" href="/index.html" data-aos="fade-down" data-aos-duration="400"
           data-aos-delay="50">Home</a>
-        <a data-scroll data-easing="easeInQuint" href="http://localhost/gallery.html" data-aos="fade-down" data-aos-duration="400"
+        <a data-scroll data-easing="easeInQuint" href="/gallery.html" data-aos="fade-down" data-aos-duration="400"
           data-aos-delay="100">Gallery</a>
         <img src="assets/img/mainlogo.png" alt="" data-aos="fade-down" data-aos-duration="1500">
         <a data-scroll data-easing="easeInQuint" href="#footer-2" data-aos="fade-down" data-aos-duration="400"
           data-aos-delay="150">Open Time</a>
-        <a data-scroll data-easing="easeInQuint" href="http://localhost/contactus.html" data-aos="fade-down" data-aos-duration="400"
+        <a data-scroll data-easing="easeInQuint" href="/contactus.html" data-aos="fade-down" data-aos-duration="400"
           data-aos-delay="100">Contact Us</a>
         <img src="assets/img/menu.png" alt="" id="btn-nav" data-aos="fade-down" data-aos-duration="700" data-aos-delay="50">
       </div>
