--- a/gallery.html
+++ b/gallery.html
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-    <div class="footer-2">
+    <div class="footer-2" id="footer-2>
       <h1 data-aos="fade-down" data-aos-duration="800" data-aos-delay="200">Contact</h1>
       <a href="" data-aos="fade-up" data-aos-duration="800" data-aos-delay="250">+94 76 988 7458</a>
       <a href="" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">info@PhotoMagic.com</a>
